--- a/style.css
+++ b/style.css
@@ -7,14 +7,22 @@ body {
     background-color: rgb(27, 27, 27);
 }
 
-#cabc {
-    background-color: rgba(24, 24, 24, 0.493);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-    color: white;
+body, input, button {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    font-size: 20px;
 }
 
-#cabc #cont #list {
+button {
+    cursor: pointer;
+}
+
+header {
+    background-color: rgba(24, 24, 24, 0.493);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+
+.menu  {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -24,18 +32,15 @@ body {
     border-radius: 50%;
 }
 
-#cabc #cont #list li {
-    display: flex;
+.menu li {
     list-style: none;
     cursor: pointer;
-
-    font-size: 20px;
     padding: 20px;
     border-radius: 20px;
     transition: 0.5s;
 }
 
-#cabc #cont #list li:hover {
+.menu li:hover {
     background-color: rgba(43, 42, 42, 0.363);
 }
 
@@ -43,8 +48,6 @@ body {
     position: fixed;
     background-color: rgb(32, 31, 31);
     box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     top: 50%;
     left: 50%;
     padding: 30px;
@@ -52,56 +55,42 @@ body {
     border-radius: 15px;
 }
 
-.painel .til {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+.painel h1 {
+    text-align: center;
     font-size: 48px;
 }
 
-.painel .inf {
+.formulario {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 40px;
+    gap: 15px;
 }
 
-.painel .inf input {
+.formulario input {
     border: none;
     outline: none;
-    cursor: pointer;
     border-radius: 12px;
-    font-size: 20px;
     padding: 10px;
+    color: black;
 }
 
-.painel .inf .text1 {
-    margin-bottom: 15px;
-}
-
-.painel #enter .but {
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.formulario button {
    font-size: 18px;
-   height: 40px;
-   width: 180px;
+   padding: 9px 70px;
    border-radius: 10px;
    border: none;
    cursor: pointer;
 
    transition: 0.2s;
+   color: black;
+    margin-top: 10px;
+
 }
 
-.painel #enter {
-    display: flex;
-    justify-content: center;
-    margin-top: 25px;
-
-    
-}
-
-.painel #enter .but:hover {
+.formulario button:hover {
     background-color: rgb(62, 61, 70);
     border: 1px solid rgba(255, 255, 255, 0.473);
     color: aliceblue;
